Tue Jul 19 15:57:51 CEST 2005	Michael Neumann <mneumann@ntecs.de>

	* lib/wee/session.rb, lib/wee/idgen/simple.rb, lib/wee/pageless/session.rb, 
	  lib/wee/application.rb, lib/wee/renderer/html/brushes.rb,
	  lib/wee/adaptors/rails.rb, lib/wee/adaptors/nitro.rb, lib/wee.rb,
	  examples/test.rb:
	  Renamed Wee::SimpleIdGenerator to Wee::SequentialIdGenerator.

	* lib/wee/page.rb: removed as it is not used anymore (we have
	  wee/core/page.rb instead).

	* Rakefile: added target 'tag'

--------------------------------------------------------------------
TAGGED 0.9.1
--------------------------------------------------------------------

Sun Jul 17 21:21:00 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* examples/nitro/run.rb: Mount example under '/'.

	* lib/wee/adaptors/nitro.rb: Use Render#controller_name. Fix bugs that
	  occured when mounted as '/'.

	* lib/wee/databases/og/session.rb: Fixed bug. Now works with newest Og 
	  version!

--------------------------------------------------------------------
TAGGED 0.9.0
--------------------------------------------------------------------

Mon Jul 11 23:31:31 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* examples/*: Lots of cleanup. New examples added.

Mon Jul 11 23:18:17 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* lib/wee/components/pager.rb, lib/wee/examples/pager.rb: Moved from examples 
	  into components directory. Slightly modified. Now class Wee::Pager.

	* lib/wee/components/login_decoration.rb (Wee::LoginDecoration): Initial
	  import.

	* lib/wee/components/component_dispatcher.rb (Wee::ComponentDispatcher):
	  Initial creation. 

	* lib/wee/components.rb: Load new components.

	* lib/wee/renderer/html/{brushes,canvas}.rb: Introduced
	  r.anchor.info(info_url) which can be used to specify the info part of a
		URL. 

Mon Jul 11 19:29:44 CEST 2005	Michael Neumann	<mneumann@ntecs.de>

	* lib/wee/renderer/html/{brushes,canvas}.rb: Added #hidden_input.	
